...
                        android:layout_marginStart="@dimen/margin_16"
                        app:cardBackgroundColor="@color/gray_e2e2e2"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:imeOptions="actionDone"
...
                        android:layout_marginStart="@dimen/margin_16"
                        app:cardBackgroundColor="@color/gray_e2e2e2"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/repeatPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:imeOptions="actionDone"
...
