...
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/folder" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibSettings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
...
